Fix title wrap long bug on scroll down.

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -202,7 +202,7 @@ body.utk-search-open {
           margin-left: 0;
 
           &.page-header--title-wrap-long {
-            p {
+            span {
               display: none !important;
             }
           }
